--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,7 @@
 </head>
 <body>
     <h1>Welcome to the Chatapp</h1>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-    var socket = io();
-    socket.on("connect", () => {
-        console.log("connected to server");
-        
-    })
-
-    socket.on('disconnect', () => {
-        console.log('Disconnect');
-        
-    })
-    </script>
+    <script src="./socket.io/socket.io.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
