--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="A simple chat app for demo purposes only.">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./icons/favicon.png" type="image/png">
+  
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="manifest" href="/manifest.webmanifest">
     <style>
       .join-head {
         font-family: 'Pacifico', cursive;
@@ -14,39 +19,41 @@
     </style>
     <title>Join - Chatroom</title>
   </head>
-  <body style="background-image: url('https://i2.wp.com/opticalcortex.com/app/uploads/2014/08/grad.jpg'); height: 100vh; background-size: cover; background-repeat: no-repeat;">
+  <body>
     <div class="container">
       <div class="row" style="height: 100vh;">
-        <div class="col-6 my-auto mx-auto">
-          <div class="head">
-            <h1 class="join-head text-center mb-4">Join a room</h1>
-            <hr>
-          </div>
-          <div class="join-body">
-              <form action="./chat.html">
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="text" name="name" class="form-control btn text-left" id="exampleInputEmail1" required aria-describedby="emailHelp" placeholder="Username">
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">Room</label>
-                    <input type="text" name="room" class="form-control btn text-left" id="exampleInputPassword1" required placeholder="Chat room">
-                  </div>
-                  <div class="form-group form-check">
-                    <input type="checkbox" name="remember-room" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Remember this room</label>
-                  </div>
-                  <input type="submit" class="btn btn-primary" value="Submit">
-              </form>
+        <div class="col-11 col-md-6 my-auto mx-auto">
+          <div class="card p-5 border-0">
+            <div class="head">
+              <h1 class="join-head text-center mb-4">Chatrooms</h1>
+              <hr>
+            </div>
+            <div class="join-body">
+                <form action="./chat.html">
+                    <div class="form-group">
+                      <label for="username">Username</label>
+                      <input type="text" name="name" class="form-control text-left border" id="username" required placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                      <label for="room">Room</label>
+                      <input type="text" name="room" class="form-control text-left border" id="room" required placeholder="Chat room">
+                    </div>
+                    <input type="submit" class="btn btn-light" value="Join">
+                </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+              .then((reg) => {
+                console.log('Service worker registered.', reg);
+              });
+        });
+      }
+    </script>
   </body>
 </html>
